<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/edit_devs">
        <Preference
            android:title="@string/add_new_device"
            android:summary="@string/creates_folder_for_new_device_files"
            android:key="addBtn"/>
        <Preference
            android:title="@string/ddfl"
            android:summary="@string/ddflD"
            android:key="downBtn" />
        <Preference
            android:title="@string/rmdfl"
            android:summary="@string/rmdflD"
            android:key="rmBtn" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/updateT">
        <CheckBoxPreference
            android:title="@string/updch"
            android:defaultValue="false"
            android:summary="@string/updchD"
            android:key="autoUpd" />
        <Preference
            android:title="@string/chfupd"
            android:summary="@string/chfupdD"
            android:key="checkUpd" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/submit">
        <Preference
            android:title="@string/submit_new_dev"
            android:summary="@string/submit_new_devD"
            android:key="sbmtDev"/>
        <Preference
            android:title="@string/submit_bug"
            android:summary="@string/submit_bugD"
            android:key="sbmtBug" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme">
        <ListPreference
            android:title="@string/ch_th"
            android:summary="@string/ch_thD"
            android:key="theme"
            android:defaultValue="Holo"
            android:entries="@array/listThemes"
            android:entryValues="@array/listValues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other">
        <Preference
            android:title="@string/about"
            android:summary="@string/license1"
            android:key="aboutPref" />
    </PreferenceCategory>
</PreferenceScreen>