<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2014 Emil Suleymanov

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     as published by the Free Software Foundation; either version 2
     of the License, or (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:clickable="false"
    android:contentDescription="29-38"
    android:orientation="vertical"
    android:visibility="visible">

    <Button
        android:id="@+id/button29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/btn29"
        android:onClick="onClick"
        android:singleLine="true"
        android:text="@string/wb"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button31"
        android:layout_toLeftOf="@+id/button32"
        android:contentDescription="@string/btn30"
        android:onClick="onClick"
        android:text="@string/p" />

    <Button
        android:id="@+id/button31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/button29"
        android:contentDescription="@string/btn31"
        android:onClick="onClick"
        android:text="@string/pl" />

    <Button
        android:id="@+id/button32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/button31"
        android:contentDescription="@string/btn32"
        android:onClick="onClick"
        android:text="@string/wf" />

    <Button
        android:id="@+id/button33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button31"
        android:layout_toRightOf="@+id/button30"
        android:contentDescription="@string/btn33"
        android:onClick="onClick"
        android:text="@string/stop" />

    <Button
        android:id="@+id/button34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button30"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button29"
        android:layout_toLeftOf="@+id/button30"
        android:contentDescription="@string/btn34"
        android:onClick="onClick"
        android:text="@string/sr"
        android:textSize="26sp" />

    <Button
        android:id="@+id/button35"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button36"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button30"
        android:layout_toLeftOf="@+id/button36"
        android:contentDescription="@string/btn35"
        android:onClick="onClick"
        android:text="@string/que"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button30"
        android:layout_toLeftOf="@+id/button33"
        android:contentDescription="@string/btn36"
        android:onClick="onClick"
        android:text="@string/exit"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button36"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button36"
        android:layout_below="@+id/button35"
        android:contentDescription="@string/btn37"
        android:onClick="onClick"
        android:text="@string/tvradio" />

    <Button
        android:id="@+id/button38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button33"
        android:layout_alignRight="@+id/button33"
        android:layout_below="@+id/button33"
        android:layout_toRightOf="@+id/button37"
        android:contentDescription="@string/btn38"
        android:onClick="onClick"
        android:text="@string/audio"
        android:textSize="15sp" />

</RelativeLayout>