<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2014 Emil Suleymanov

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     as published by the Free Software Foundation; either version 3
     of the License, or (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/send_mode_btn" />

        <RadioButton
            android:id="@+id/write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_mode_btn" />

        <RadioButton
            android:id="@+id/rename"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:text="@string/rename_mode_btn" />

        <RadioButton
            android:id="@+id/endis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endis_mode_btn" />
    </RadioGroup>
</LinearLayout>